Fixed new sidebar spacing issues arising in Ubuntu 16.04.
Changes to GTK completely broke the appearance of sidebars such as
those found in Nautilus and the file chooser control. These fixes
restore label and icon spacing to an approximation of how things
looked in Ubuntu 15.04/15.10.

--- a/gtk-3.0/Stylus/Cells.styl
+++ b/gtk-3.0/Stylus/Cells.styl
@@ -61,23 +61,25 @@ GtkPaned
  *  it controls a bar or panel that resides on one side (usually the left) of the window.
  */
 .sidebar,
-GtkPlacesSidebar
+GtkPlacesSidebar,
+GtkStackSidebar
     @extends .view;
     font:                               bold;
-    padding:                            0em;
+    //padding:                            0em;
 
     // Governs the padding between list entries in the Nautilus sidebar
     .view                               { padding: 0.5em; }
 
+    &.list,
     .list
         .separator
             blank();
-                    
+
         .sidebar-item,
-        .sidebar-item.button
+        .sidebar-row
             @extends GtkWidget;
             button-text-color:          TextColor;
-
+            //padding:                    0.5em;
             &:selected
                 background-image:       SelectionGradientVertical;
                 button-text-color:      TextColorSelected;
@@ -86,6 +88,15 @@ GtkPlacesSidebar
                     background-color:   HighlightColor;
                     background-image:   none;
                     button-text-color:  TextColorHighlighted;
+
+            .label
+                padding:                1em 0em 1em 1em;
+
+            .sidebar-button
+                @extends GtkWidget;
+
+            .sidebar-icon
+                padding-left:           0.5em;
 
     GtkScrolledWindow
         @extends GtkWidget;
